rename to `rules_cc_modules`

--- a/example/src/BUILD
+++ b/example/src/BUILD
@@ -1,4 +1,4 @@
-load("@bazel_rules_cc_module//:tools/cc_module.bzl", "cc_module_library")
+load("@rules_cc_module//:tools/cc_module.bzl", "cc_module_library")
 
 
 cc_module_library(
